Updated docs Integration test for app restart
